# Underink-SE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
built/linux/exe/: gatekeeper.txt
built/mac/exe/: totalTest  tutorial
include/: audioEnv.h  audioManager.h  commandQueue.h  constants.h  easing.h  platform.h  playWav.h  stdcmd.h
include/audioSystem/: audioChannel.h  audioChannelThread.h  audioManager.h  audioManagerTable.h  playWav.h  queue.h
include/audioThread/: audioThread.h
include/audioTool/: audioTool.h
include/audioTool/management/: cache.h  cache_internal.h  queue.h  resource.h
src/: audioEnv.c  audioManager.c  commandQueue.c  easing.c  stdcmd.c
src/audioSystem/mac/: audioChannel.c  audioChannelThread.c  audioManager.c  audioManagerTable.c  playWav.c  queue.c
src/audioSystem/mac/performance/arm/: updateAudioDataAmplitude.s  updateVolume.s
src/audioSystem/mac/performance/arm/easing/: linear.s  smootherstep.s  smoothstep.s
src/audioSystem/mac/performance/intel/: updateVolume.s
src/audioSystem/win/: audioChannel.c  audioManagerTable.c  playWav.c
src/audioThread/mac/: audioThread.c  playWav.c
src/audioThread/mac/performance/arm/: updateAudioDataAmplitude.s
src/audioTool/management/: cache.c  queue.c  resource.c
structures/: audioBaseTypes.h  audioStruct.h  audioSystemArgs.h  audioThreadStruct.h  soundStruct.h  wavContainerStruct.h  wavFormat.h
tests_public/: AMgrTableTest.c  totalTest.c
tests_public/mac/: totalTest.c
tests_public/win/: totalTest.c  tutorial.c
